feature: add axios with cancel token

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "url": "https://github.com/robertoachar/react-axios-cancel-token/issues"
   },
   "dependencies": {
+    "axios": "0.18.0",
     "react": "16.8.4",
     "react-dom": "16.8.4",
     "react-scripts": "2.1.8"
