--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "1.0.0",
   "description": "React + Axios + Cancel Token",
   "author": "Roberto Achar <robertoachar@gmail.com>",
-  "homepage": "https://github.com/robertoachar/react-axios-cancel-token#readme",
+  "homepage": "https://robertoachar.github.io/react-axios-cancel-token",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "lint": "eslint src/**/**.jsx",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "repository": {
     "type": "git",
@@ -20,6 +22,7 @@
   },
   "dependencies": {
     "axios": "0.18.0",
+    "gh-pages": "2.0.1",
     "react": "16.8.4",
     "react-dom": "16.8.4",
     "react-scripts": "2.1.8"
